Ensure preview container are allways aligned with filearea tools

--- a/frontend/FileArea/CSS/Elements/FileArea.css
+++ b/frontend/FileArea/CSS/Elements/FileArea.css
@@ -5,6 +5,8 @@ file-area {
   border-top: 1px solid var(--primary-border);
 
   .file-area-tools {
+    flex: 2;
+    min-width: 225px;
     display: flex;
     flex-direction: column;
     background-color: var(--secondary-bg);
@@ -14,8 +16,8 @@ file-area {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 14.4vw;
       height: 100%;
+      width: 100%;
       padding: 0.5rem 1rem;
       background-color: var(--secondary-bg);
       color: white;
