--- a/frontend/FileArea/CSS/Elements/FileAreaView.css
+++ b/frontend/FileArea/CSS/Elements/FileAreaView.css
@@ -1,5 +1,5 @@
 file-area-view {
-  flex: 1;
+  flex: 11.5;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
