--- a/frontend/MapEditor/CSS/Elements/MapEditorSelectionArea.css
+++ b/frontend/MapEditor/CSS/Elements/MapEditorSelectionArea.css
@@ -5,4 +5,5 @@ map-editor-selection-area {
   display: flex;
   flex-direction: column;
   align-items: center;
+  row-gap: 1rem;
 }
