--- a/frontend/SpriteEditor/CSS/Elements/SpriteTools.css
+++ b/frontend/SpriteEditor/CSS/Elements/SpriteTools.css
@@ -1,4 +1,5 @@
 sprite-tools {
+  flex: 1.5;
   display: flex;
   flex-direction: column;
   justify-content: center;
